--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,12 @@ android {
         multiDexEnabled true
 
     }
-    dataBinding {
-        enabled = true
+    buildFeatures {
+
+        dataBinding true
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -56,11 +59,18 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0-alpha03'
     implementation 'com.google.android.play:core:1.8.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.61"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.10'
+    implementation "androidx.core:core-ktx:1.3.2"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
+
     //Firebase libs
 
     //implementation 'com.google.firebase:firebase-admin:6.4.0'
+    implementation 'com.google.firebase:firebase-database-ktx:19.5.0'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
     implementation 'com.google.firebase:firebase-appindexing:19.1.0'
     implementation 'com.google.firebase:firebase-auth:19.4.0'
@@ -70,16 +80,16 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.5.1'
     implementation 'com.google.firebase:firebase-messaging:20.3.0'
     implementation 'com.google.android.gms:play-services-ads:19.5.0'
-    implementation 'com.facebook.android:facebook-android-sdk:5.1.1'
+    implementation 'com.facebook.android:facebook-android-sdk:8.1.0'
     implementation 'com.hmomeni.progresscircula:progresscircula:0.2.1'
     implementation "com.github.skydoves:balloon:1.1.0"
     implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:2.0.24'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.20'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.pes.materialcolorpicker:library:1.2.4'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
-    implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.budiyev.android:circular-progress-bar:1.2.2'
     implementation 'com.github.mmin18:realtimeblurview:1.1.2'
     implementation 'com.github.devendroid:ReadMoreOption:1.0.2'
@@ -87,7 +97,6 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
-    implementation 'com.mikhaellopez:rxanimation:1.0.0'
     implementation 'com.mikhaellopez:gradientview:1.1.0'
     implementation 'com.google.android:flexbox:2.0.1'
     implementation 'com.github.Pradyuman7:ChocoBar:V1.0'
@@ -96,7 +105,7 @@ dependencies {
     kapt 'com.android.databinding:compiler:3.1.4'
 
 
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
