--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     //Firebase libs
 
     //implementation 'com.google.firebase:firebase-admin:6.4.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:21.7.1'
     implementation 'com.google.firebase:firebase-database-ktx:19.5.0'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
     implementation 'com.google.firebase:firebase-appindexing:19.1.0'
