--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".view.activities.AboutActivity" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".view.activities.EditQuoteActivity"
             android:label="Editar post" />
         <activity android:name=".view.activities.UserActivity" />
@@ -47,6 +48,7 @@
         <activity
             android:name=".view.activities.Splash"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -55,6 +57,7 @@
             </intent-filter>
         </activity> <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
         <activity
+            android:screenOrientation="portrait"
             android:name=".view.activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
