--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
@@ -105,6 +109,8 @@ dependencies {
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation 'cat.ereza:customactivityoncrash:2.3.0'
     implementation 'com.opensooq.supernova:gligar:1.1.0'
+    implementation 'gun0912.ted:tedbottompicker:2.0.1'
+    implementation 'gun0912.ted:tedpermission-rx2:2.2.3'
     implementation 'com.github.veeyaarVR:SuperGradientTextView:1.1'
 
     kapt 'com.android.databinding:compiler:3.1.4'
