--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-permission android:name="android.permission.SET_ALARM" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
     <application
         android:name=".view.activities.App"
@@ -17,12 +20,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".view.activities.AddIconsActivity" />
+        <activity android:name=".view.activities.PickIconActivity" />
         <activity android:name=".view.activities.AboutActivity" />
         <activity
-            android:screenOrientation="portrait"
             android:name=".view.activities.EditQuoteActivity"
-            android:windowSoftInputMode="adjustNothing"
-            android:label="Editar post" />
+            android:label="Editar post"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".view.activities.UserActivity" />
         <activity
             android:name=".view.activities.ErrorActivity"
@@ -59,11 +64,11 @@
             </intent-filter>
         </activity> <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
         <activity
-            android:screenOrientation="portrait"
             android:name=".view.activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:launchMode="singleTop"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustNothing" />
         <activity android:name=".view.activities.NewUser" />
 
@@ -80,10 +85,11 @@
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.creativ.fileprovider"
-            tools:replace="android:authorities"
             android:exported="false"
-            android:grantUriPermissions="true">
+            android:grantUriPermissions="true"
+            tools:replace="android:authorities">
             <meta-data
+                tools:replace="android:resource"
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
             <meta-data
