--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ android {
 }
 
 dependencies {
+    def lifecycle_version = "2.2.0"
+    def arch_version = "2.1.0"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -66,13 +68,17 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0-alpha03'
     implementation 'com.google.android.play:core:1.8.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0'
-
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.10'
+    //Ktx libs
     implementation "androidx.core:core-ktx:1.3.2"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
     implementation "androidx.fragment:fragment-ktx:1.2.5"
     implementation 'com.github.mcginty:material-colors:1.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
 
     //Firebase libs
     //implementation 'com.google.firebase:firebase-admin:6.4.0'
